@@ -2,6 +2,8 @@
  - src/drvPadUdpComm.c:
    PADRPLY_STRM_NSAMPLES macro arg is now pointer to reply.
    (Support for 32-bit stream data.)
+ - src/padProto.c: set cmdSize based on actual command (SIM's command
+   struct is bigger than previously hardcoded 16 bytes).
 20100118 (T.S.)
  - src/Makefile, src/devWfRawSig.c, src/drvPadUdpComm.c, src/drvPadUdpComm.h,
    src/drvPadUdpCommIO.h, src/fidProcess.c, src/fidProcess.h,
